--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ keywords = [
     "protobuf",
     "dynamic-message",
 ]
-license = "AGPLv3"
+license = "AGPL-3.0-only"
 edition = "2021"
 repository = "https://github.com/LaoLittle/dynamic-protobuf"
 
